--- a/src/pages/adventures/style.css
+++ b/src/pages/adventures/style.css
@@ -9,7 +9,15 @@ background-repeat: no-repeat;
 
 .position {
     position:absolute; 
-    bottom: 80%;
-    left: 70%
+    bottom: 50%;
+    left: 70%;
+    z-index: 2
 
+};
+
+
+
+.billy {
+    z-index: 0;
 }
+
